{
  "version": 4,
  "terraform_version": "0.12.18",
  "serial": 44,
  "lineage": "3c0a741b-6da5-dfdb-0599-bf46e1c2e006",
  "resources": [
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "vpc_id",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:945116902499:vpc/vpc-06c13c9b668bf9b10",
            "cidr_block": "10.126.196.128/26",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-0a2ca9630501f4c41",
                "cidr_block": "10.126.196.128/26",
                "state": "associated"
              }
            ],
            "default": false,
            "dhcp_options_id": "dopt-1014e76a",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "filter": [
              {
                "name": "tag:Name",
                "values": [
                  "Kansas_UAT_App_VPC"
                ]
              }
            ],
            "id": "vpc-06c13c9b668bf9b10",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-09d7a40e3073928b0",
            "owner_id": "945116902499",
            "state": "available",
            "tags": {
              "Name": "Kansas_UAT_App_VPC"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb",
      "name": "aws_ecs_alb",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:945116902499:loadbalancer/app/Sym-Kan-UAT-Srv-ELB/917df8caf08aa1aa",
            "arn_suffix": "app/Sym-Kan-UAT-Srv-ELB/917df8caf08aa1aa",
            "dns_name": "internal-Sym-Kan-UAT-Srv-ELB-1840076463.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:us-east-1:945116902499:loadbalancer/app/Sym-Kan-UAT-Srv-ELB/917df8caf08aa1aa",
            "idle_timeout": 600,
            "internal": true,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "Sym-Kan-UAT-Srv-ELB",
            "security_groups": [
              "sg-0a6b32ee46fc561ff"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0141b22d927d3f2a3"
              },
              {
                "subnet_id": "subnet-0472ff3f6f5061d0a"
              }
            ],
            "subnets": [
              "subnet-0141b22d927d3f2a3",
              "subnet-0472ff3f6f5061d0a"
            ],
            "tags": {
              "app_version": "3.4.0",
              "backup_frequency": "Never",
              "backup_vault": "-N/A-",
              "billing_type": "Client",
              "client_name": "Kansas",
              "environment_name": "Production",
              "project_name": "Symphony",
              "security_zone": "DMZ",
              "service_name": "ASG",
              "service_role": "ECS"
            },
            "vpc_id": "vpc-06c13c9b668bf9b10",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.security_group"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "front_end",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:945116902499:listener/app/Sym-Kan-UAT-Srv-ELB/917df8caf08aa1aa/bc3d25d2c8680dd8",
            "certificate_arn": "arn:aws:acm:us-east-1:945116902499:certificate/8482eb94-d63e-42eb-b2dd-15b7fd3c40ec",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:945116902499:targetgroup/Sym-Kan-UAT-Srv-jobs/a67c555299f9cbb7",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:945116902499:listener/app/Sym-Kan-UAT-Srv-ELB/917df8caf08aa1aa/bc3d25d2c8680dd8",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:945116902499:loadbalancer/app/Sym-Kan-UAT-Srv-ELB/917df8caf08aa1aa",
            "port": 443,
            "protocol": "HTTPS",
            "ssl_policy": "ELBSecurityPolicy-2016-08",
            "timeouts": null
          },
          "dependencies": [
            "aws_alb.aws_ecs_alb",
            "aws_alb_target_group.ecs-group",
            "aws_security_group.security_group"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_listener_rule",
      "name": "listener_rule",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:945116902499:targetgroup/Sym-Kan-UAT-Srv-auditevents/12e41cc13f8ad889",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:945116902499:listener-rule/app/Sym-Kan-UAT-Srv-ELB/917df8caf08aa1aa/bc3d25d2c8680dd8/7fdce19da6efbe23",
            "condition": [
              {
                "field": "path-pattern",
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/api/auditevents*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": [],
                "values": [
                  "/api/auditevents*"
                ]
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:945116902499:listener-rule/app/Sym-Kan-UAT-Srv-ELB/917df8caf08aa1aa/bc3d25d2c8680dd8/7fdce19da6efbe23",
            "listener_arn": "arn:aws:elasticloadbalancing:us-east-1:945116902499:listener/app/Sym-Kan-UAT-Srv-ELB/917df8caf08aa1aa/bc3d25d2c8680dd8",
            "priority": 3
          },
          "dependencies": [
            "aws_alb.aws_ecs_alb",
            "aws_alb_listener.front_end",
            "aws_alb_target_group.ecs-group",
            "aws_security_group.security_group"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:945116902499:targetgroup/Sym-Kan-UAT-Srv-cklscrawler/fb5e912284da4c16",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:945116902499:listener-rule/app/Sym-Kan-UAT-Srv-ELB/917df8caf08aa1aa/bc3d25d2c8680dd8/2366562037d279e7",
            "condition": [
              {
                "field": "path-pattern",
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/api/checklistcrawler*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": [],
                "values": [
                  "/api/checklistcrawler*"
                ]
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:945116902499:listener-rule/app/Sym-Kan-UAT-Srv-ELB/917df8caf08aa1aa/bc3d25d2c8680dd8/2366562037d279e7",
            "listener_arn": "arn:aws:elasticloadbalancing:us-east-1:945116902499:listener/app/Sym-Kan-UAT-Srv-ELB/917df8caf08aa1aa/bc3d25d2c8680dd8",
            "priority": 2
          },
          "dependencies": [
            "aws_alb.aws_ecs_alb",
            "aws_alb_listener.front_end",
            "aws_alb_target_group.ecs-group",
            "aws_security_group.security_group"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:945116902499:targetgroup/Sym-Kan-UAT-Srv-dataaudit/6e4f2e67b783639f",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:945116902499:listener-rule/app/Sym-Kan-UAT-Srv-ELB/917df8caf08aa1aa/bc3d25d2c8680dd8/d3acca488ebe9e75",
            "condition": [
              {
                "field": "path-pattern",
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/api/dataaudit*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": [],
                "values": [
                  "/api/dataaudit*"
                ]
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:945116902499:listener-rule/app/Sym-Kan-UAT-Srv-ELB/917df8caf08aa1aa/bc3d25d2c8680dd8/d3acca488ebe9e75",
            "listener_arn": "arn:aws:elasticloadbalancing:us-east-1:945116902499:listener/app/Sym-Kan-UAT-Srv-ELB/917df8caf08aa1aa/bc3d25d2c8680dd8",
            "priority": 4
          },
          "dependencies": [
            "aws_alb.aws_ecs_alb",
            "aws_alb_listener.front_end",
            "aws_alb_target_group.ecs-group",
            "aws_security_group.security_group"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:945116902499:targetgroup/Sym-Kan-UAT-Srv-esindexer/fec84e7639db1055",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:945116902499:listener-rule/app/Sym-Kan-UAT-Srv-ELB/917df8caf08aa1aa/bc3d25d2c8680dd8/53085f97ab6758bf",
            "condition": [
              {
                "field": "path-pattern",
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/api/elasticsearchindexer*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": [],
                "values": [
                  "/api/elasticsearchindexer*"
                ]
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:945116902499:listener-rule/app/Sym-Kan-UAT-Srv-ELB/917df8caf08aa1aa/bc3d25d2c8680dd8/53085f97ab6758bf",
            "listener_arn": "arn:aws:elasticloadbalancing:us-east-1:945116902499:listener/app/Sym-Kan-UAT-Srv-ELB/917df8caf08aa1aa/bc3d25d2c8680dd8",
            "priority": 1
          },
          "dependencies": [
            "aws_alb.aws_ecs_alb",
            "aws_alb_listener.front_end",
            "aws_alb_target_group.ecs-group",
            "aws_security_group.security_group"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_target_group",
      "name": "ecs-group",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:945116902499:targetgroup/Sym-Kan-UAT-Srv-auditevents/12e41cc13f8ad889",
            "arn_suffix": "targetgroup/Sym-Kan-UAT-Srv-auditevents/12e41cc13f8ad889",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/api/auditevents/healthz",
                "port": "traffic-port",
                "protocol": "HTTPS",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:945116902499:targetgroup/Sym-Kan-UAT-Srv-auditevents/12e41cc13f8ad889",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "Sym-Kan-UAT-Srv-auditevents",
            "port": 443,
            "protocol": "HTTPS",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "app_version": "3.4.0",
              "backup_frequency": "Never",
              "backup_vault": "-N/A-",
              "billing_type": "Client",
              "client_name": "Kansas",
              "environment_name": "Production",
              "project_name": "Symphony",
              "security_zone": "DMZ",
              "service_name": "ASG",
              "service_role": "ECS"
            },
            "target_type": "instance",
            "vpc_id": "vpc-06c13c9b668bf9b10"
          },
          "dependencies": [
            "aws_alb.aws_ecs_alb",
            "aws_security_group.security_group"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:945116902499:targetgroup/Sym-Kan-UAT-Srv-cklscrawler/fb5e912284da4c16",
            "arn_suffix": "targetgroup/Sym-Kan-UAT-Srv-cklscrawler/fb5e912284da4c16",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/api/checklistcrawler/healthz",
                "port": "traffic-port",
                "protocol": "HTTPS",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:945116902499:targetgroup/Sym-Kan-UAT-Srv-cklscrawler/fb5e912284da4c16",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "Sym-Kan-UAT-Srv-cklscrawler",
            "port": 443,
            "protocol": "HTTPS",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "app_version": "3.4.0",
              "backup_frequency": "Never",
              "backup_vault": "-N/A-",
              "billing_type": "Client",
              "client_name": "Kansas",
              "environment_name": "Production",
              "project_name": "Symphony",
              "security_zone": "DMZ",
              "service_name": "ASG",
              "service_role": "ECS"
            },
            "target_type": "instance",
            "vpc_id": "vpc-06c13c9b668bf9b10"
          },
          "dependencies": [
            "aws_alb.aws_ecs_alb",
            "aws_security_group.security_group"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:945116902499:targetgroup/Sym-Kan-UAT-Srv-dataaudit/6e4f2e67b783639f",
            "arn_suffix": "targetgroup/Sym-Kan-UAT-Srv-dataaudit/6e4f2e67b783639f",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/api/dataaudit/healthz",
                "port": "traffic-port",
                "protocol": "HTTPS",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:945116902499:targetgroup/Sym-Kan-UAT-Srv-dataaudit/6e4f2e67b783639f",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "Sym-Kan-UAT-Srv-dataaudit",
            "port": 443,
            "protocol": "HTTPS",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "app_version": "3.4.0",
              "backup_frequency": "Never",
              "backup_vault": "-N/A-",
              "billing_type": "Client",
              "client_name": "Kansas",
              "environment_name": "Production",
              "project_name": "Symphony",
              "security_zone": "DMZ",
              "service_name": "ASG",
              "service_role": "ECS"
            },
            "target_type": "instance",
            "vpc_id": "vpc-06c13c9b668bf9b10"
          },
          "dependencies": [
            "aws_alb.aws_ecs_alb",
            "aws_security_group.security_group"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:945116902499:targetgroup/Sym-Kan-UAT-Srv-esindexer/fec84e7639db1055",
            "arn_suffix": "targetgroup/Sym-Kan-UAT-Srv-esindexer/fec84e7639db1055",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/api/elasticsearchindexer/healthz",
                "port": "traffic-port",
                "protocol": "HTTPS",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:945116902499:targetgroup/Sym-Kan-UAT-Srv-esindexer/fec84e7639db1055",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "Sym-Kan-UAT-Srv-esindexer",
            "port": 443,
            "protocol": "HTTPS",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "app_version": "3.4.0",
              "backup_frequency": "Never",
              "backup_vault": "-N/A-",
              "billing_type": "Client",
              "client_name": "Kansas",
              "environment_name": "Production",
              "project_name": "Symphony",
              "security_zone": "DMZ",
              "service_name": "ASG",
              "service_role": "ECS"
            },
            "target_type": "instance",
            "vpc_id": "vpc-06c13c9b668bf9b10"
          },
          "dependencies": [
            "aws_alb.aws_ecs_alb",
            "aws_security_group.security_group"
          ]
        },
        {
          "index_key": 4,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:945116902499:targetgroup/Sym-Kan-UAT-Srv-jobs/a67c555299f9cbb7",
            "arn_suffix": "targetgroup/Sym-Kan-UAT-Srv-jobs/a67c555299f9cbb7",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/Account/Login?ReturnUrl=%2Fjobs",
                "port": "traffic-port",
                "protocol": "HTTPS",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:945116902499:targetgroup/Sym-Kan-UAT-Srv-jobs/a67c555299f9cbb7",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "Sym-Kan-UAT-Srv-jobs",
            "port": 443,
            "protocol": "HTTPS",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "app_version": "3.4.0",
              "backup_frequency": "Never",
              "backup_vault": "-N/A-",
              "billing_type": "Client",
              "client_name": "Kansas",
              "environment_name": "Production",
              "project_name": "Symphony",
              "security_zone": "DMZ",
              "service_name": "ASG",
              "service_role": "ECS"
            },
            "target_type": "instance",
            "vpc_id": "vpc-06c13c9b668bf9b10"
          },
          "dependencies": [
            "aws_alb.aws_ecs_alb",
            "aws_security_group.security_group"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "httptohttps",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:945116902499:listener/app/Sym-Kan-UAT-Srv-ELB/917df8caf08aa1aa/63135a18f4dcd9f1",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "order": 1,
                "redirect": [
                  {
                    "host": "#{host}",
                    "path": "/#{path}",
                    "port": "443",
                    "protocol": "HTTPS",
                    "query": "#{query}",
                    "status_code": "HTTP_301"
                  }
                ],
                "target_group_arn": "",
                "type": "redirect"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:945116902499:listener/app/Sym-Kan-UAT-Srv-ELB/917df8caf08aa1aa/63135a18f4dcd9f1",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:945116902499:loadbalancer/app/Sym-Kan-UAT-Srv-ELB/917df8caf08aa1aa",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "timeouts": null
          },
          "dependencies": [
            "aws_alb.aws_ecs_alb",
            "aws_security_group.security_group"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "security_group",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:945116902499:security-group/sg-0a6b32ee46fc561ff",
            "description": "Security Group for ECS Security Group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a6b32ee46fc561ff",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "Sym-Kan-UAT-Srv-SG",
            "name_prefix": null,
            "owner_id": "945116902499",
            "revoke_rules_on_delete": false,
            "tags": {
              "app_version": "3.4.0",
              "backup_frequency": "Never",
              "backup_vault": "-N/A-",
              "billing_type": "Client",
              "client_name": "Kansas",
              "environment_name": "Production",
              "project_name": "Symphony",
              "security_zone": "DMZ",
              "service_name": "SG",
              "service_role": "ECS"
            },
            "timeouts": null,
            "vpc_id": "vpc-06c13c9b668bf9b10"
          }
        }
      ]
    }
  ]
}